# GreenLife

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/greenlife/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov5s.param
app/src/main/java/YAO/GreenLife/Utils/: HttpUtils.java  Utils.java
app/src/main/java/YAO/GreenLife/adapter/: HistoryAdapter.java  PostAdapter.java
app/src/main/java/YAO/GreenLife/bean/: history.java  post.java
app/src/main/java/YAO/GreenLife/core/: Box.java  DetailsActivity.java  HistoryFragment.java  IdentifyFragment.java  ImageNetClasses.java  LoginActivity.java  MainActivity.java  NanoDet.java  RegistActivity.java  TipsFragment.java  (+1 more)
app/src/main/jni/: CMakeLists.txt  jni_interface.cpp  yolov5ncnn_jni.cpp
app/src/main/res/drawable/: button_border.xml  button_identify.xml  divider.xml  edittext_border.xml  edittext_border_identify.xml  edittext_border_tips.xml
app/src/main/res/layout/: activity_details.xml  activity_login.xml  activity_regist.xml  fragment_history.xml  fragment_identify.xml  fragment_tips.xml  item_history.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
experiment_app/app/: build.gradle
experiment_app/app/src/main/res/layout/: activity_main.xml
experiment_app/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
